@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.60 (gritter) 4/20/06";
+	"@(#)/usr/ucb/otfdump.sl	6.61 (gritter) 4/25/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.60 (gritter) 4/20/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.60 (gritter) 4/20/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.61 (gritter) 4/25/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.61 (gritter) 4/25/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.60 (gritter) 4/20/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.61 (gritter) 4/25/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.60 (gritter) 4/20/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.61 (gritter) 4/25/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.60";
+const char revision[] = "6.61";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.42 (gritter) 4/18/06
@@ -24,7 +24,7 @@ hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.73 (gritter) 4/18/06
 n2.c: * Sccsid @(#)n2.c	1.19 (gritter) 4/18/06
 n3.c: * Sccsid @(#)n3.c	1.84 (gritter) 4/18/06
-n4.c: * Sccsid @(#)n4.c	1.25 (gritter) 3/21/06
+n4.c: * Sccsid @(#)n4.c	1.26 (gritter) 4/25/06
 n5.c: * Sccsid @(#)n5.c	1.42 (gritter) 4/19/06
 n7.c: * Sccsid @(#)n7.c	1.45 (gritter) 4/2/06
 n8.c: * Sccsid @(#)n8.c	1.23 (gritter) 4/19/06
@@ -36,7 +36,7 @@ tdef.h: * Sccsid @(#)tdef.h	1.77 (gritter) 4/20/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.23 (gritter) 3/22/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.33 (gritter) 4/14/06
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.34 (gritter) 4/14/06
-nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
+nroff.d/tw.h: * Sccsid @(#)tw.h	1.6 (gritter) 4/25/06
 troff.d/afm.c: * Sccsid @(#)afm.c	1.53 (gritter) 3/20/06
 troff.d/afm.h: * Sccsid @(#)afm.h	1.29 (gritter) 4/14/06
 troff.d/dev.h: * Sccsid @(#)dev.h	1.10 (gritter) 3/10/06
@@ -44,9 +44,9 @@ troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.12 (gritter) 3/10/06
 troff.d/otf.c: * Sccsid @(#)otf.c	1.55 (gritter) 4/20/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
-troff.d/proto.h: * Sccsid @(#)proto.h	1.43 (gritter) 4/14/06
-troff.d/t10.c: * Sccsid @(#)t10.c	1.69 (gritter) 4/20/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.139 (gritter) 4/19/06
+troff.d/proto.h: * Sccsid @(#)proto.h	1.44 (gritter) 4/25/06
+troff.d/t10.c: * Sccsid @(#)t10.c	1.70 (gritter) 4/25/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.140 (gritter) 4/25/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.23 (gritter) 4/14/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
@@ -58,8 +58,8 @@ troff.d/dpost.d/asciitype.c:	Sccsid @(#)asciitype.c	1.4 (gritter) 4/17/03
 troff.d/dpost.d/asciitype.h:	Sccsid @(#)asciitype.h	1.6 (gritter) 9/9/05	
 troff.d/dpost.d/color.c: * Sccsid @(#)color.c	1.5 (gritter) 11/29/05
 troff.d/dpost.d/comments.h: * Sccsid @(#)comments.h	1.5 (gritter) 8/23/05
-troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.146 (gritter) 4/17/06
-troff.d/dpost.d/dpost.h: * Sccsid @(#)dpost.h	1.6 (gritter) 10/1/05
+troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.147 (gritter) 4/25/06
+troff.d/dpost.d/dpost.h: * Sccsid @(#)dpost.h	1.7 (gritter) 4/25/06
 troff.d/dpost.d/dpost_afm.c: * Sccsid @(#)dpost_afm.c	1.2 (gritter) 9/29/05
 troff.d/dpost.d/dpost_draw.c: * Sccsid @(#)dpost_draw.c	1.5 (gritter) 11/28/05
 troff.d/dpost.d/dpost_makedev.c: * Sccsid @(#)dpost_makedev.c	1.1 (gritter) 9/4/05
